--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>AIKATSU!</title>
+    <title>Test</title>
 </head>
 <body>
-    <h1>アイカツ！</h1>
+    <h1>TEST</h1>
 </body>
 </html>
